public  c project migration

--- a/conversion/tapis_v2_to_v3/data_exploration_2.ipynb
+++ b/conversion/tapis_v2_to_v3/data_exploration_2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 1,
    "id": "c18e4b34-fb63-4eac-9507-74ae79802df3",
    "metadata": {},
    "outputs": [],
@@ -24,32 +24,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "ef60f956-8f92-4a89-9c28-dd1a366bdacc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "job_events_df = pd.read_json('/mnt/data2/Projects/vdjserver/vdjserverJobEvents.json')\n",
-    "job_permissions_df = pd.read_json('/mnt/data2/Projects/vdjserver/vdjserverJobPermissions.json')\n",
-    "jobs_all_df = pd.read_json('/mnt/data2/Projects/vdjserver/vdjserverJobs_all.json')\n",
+    "job_events_df = pd.read_json('/mnt/md0/Projects/vdjserver/vdjserverJobEvents.json')\n",
+    "job_permissions_df = pd.read_json('/mnt/md0/Projects/vdjserver/vdjserverJobPermissions.json')\n",
+    "jobs_all_df = pd.read_json('/mnt/md0/Projects/vdjserver/vdjserverJobs_all.json')\n",
     "jobs_all_df['parameters.Creator'] = jobs_all_df['parameters'].apply(lambda x: json.loads(x).get('Creator', np.nan) if x else np.nan)\n",
-    "metadata_perms_df = pd.read_json('/mnt/data2/Projects/vdjserver/vdjserverMetadataPermissions.json')\n",
+    "metadata_perms_df = pd.read_json('/mnt/md0/Projects/vdjserver/vdjserverMetadataPermissions.json')\n",
     "\n",
-    "with open('/mnt/data2/Projects/vdjserver/vdjserverJsonArrayFeb042025.json', 'r') as f:\n",
+    "with open('/mnt/md0/Projects/vdjserver/vdjserverJsonArrayFeb042025.json', 'r') as f:\n",
     "    jsonarray = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "163f864c-bfc1-4f60-be28-b2c2ad43f411",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "id": "5e2a3b63-e630-4ccb-b35b-acc6573be86c",
    "metadata": {},
    "outputs": [],
@@ -68,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "id": "4968e34e-3ef2-4de8-b79b-3130ac48310d",
    "metadata": {},
    "outputs": [
@@ -94,7 +86,7 @@
     }
    ],
    "source": [
-    "mailing_list = pd.read_csv(\"/mnt/data2/Projects/vdjserver/VDJServer_mailing_list.txt\", sep = ';', skiprows = 8)\n",
+    "mailing_list = pd.read_csv(\"/mnt/md0/Projects/vdjserver/VDJServer_mailing_list.txt\", sep = ';', skiprows = 8)\n",
     "mailing_list.columns = ['Email']\n",
     "mailing_list = mailing_list.iloc[:-5]\n",
     "mailing_list['updated_email'] = mailing_list['Email'].apply(lambda row: row.replace(\" at \", \"@\"))\n",
@@ -113,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "id": "90c2177e-5e24-4274-a148-6d183ef7e422",
    "metadata": {},
    "outputs": [
@@ -137,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 10,
    "id": "3a96e83a-f451-4f91-a1f7-7f64c1a34300",
    "metadata": {},
    "outputs": [
@@ -147,19 +139,23 @@
      "text": [
       "{\n",
       "    \"_id\": {\n",
-      "        \"$oid\": \"58925d85e4b0e5e1cf0739a4\"\n",
+      "        \"$oid\": \"5ec875c2c9e77c00019399ae\"\n",
       "    },\n",
-      "    \"uuid\": \"6410201027101126170-242ac11c-0001-012\",\n",
+      "    \"uuid\": \"2873601193076059670-242ac113-0001-012\",\n",
       "    \"schemaId\": null,\n",
       "    \"internalUsername\": null,\n",
-      "    \"associationIds\": [],\n",
-      "    \"lastUpdated\": \"2017-02-06T11:37:38.824-06:00\",\n",
-      "    \"name\": \"publicProject\",\n",
+      "    \"associationIds\": [\n",
+      "        \"6963222254960045590-242ac116-0001-012\"\n",
+      "    ],\n",
+      "    \"lastUpdated\": \"2020-06-18T13:26:38.062-05:00\",\n",
+      "    \"name\": \"projectLoad\",\n",
       "    \"value\": {\n",
-      "        \"name\": \"My project\",\n",
-      "        \"showArchivedJobs\": false\n",
+      "        \"shouldLoad\": true,\n",
+      "        \"isLoaded\": true,\n",
+      "        \"repertoireMetadataLoaded\": true,\n",
+      "        \"rearrangementDataLoaded\": true\n",
       "    },\n",
-      "    \"created\": \"2017-02-01T16:13:25.986-06:00\",\n",
+      "    \"created\": \"2020-05-22T20:00:50.335-05:00\",\n",
       "    \"owner\": \"vdj\",\n",
       "    \"tenantId\": \"vdjserver.org\"\n",
       "}\n"
@@ -169,7 +165,7 @@
    "source": [
     "for item in jsonarray:\n",
     "    item_type = item['name']\n",
-    "    if item_type == 'publicProject':\n",
+    "    if item_type == 'projectLoad':\n",
     "        print(json.dumps(item, indent = 4))\n",
     "        break\n",
     "        "
@@ -2146,7 +2142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 11,
    "id": "71cdba7e-cfdd-4c4a-9bd9-19f390592d12",
    "metadata": {},
    "outputs": [
@@ -2154,14 +2150,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': {'$oid': '6119d2c3d6018000016d6adc'}, 'uuid': '1874419312501190165-242ac117-0001-012', 'schemaId': None, 'internalUsername': None, 'associationIds': [], 'lastUpdated': '2023-01-19T18:29:08.219-06:00', 'name': 'public_project', 'value': {'study_id': 'PRJNA549712', 'study_title': 'A pathogenic and clonally expanded B cell transcriptome in active multiple sclerosis', 'study_type': {'id': 'NCIT:C16084', 'label': 'Observational Study'}, 'study_description': 'Central nervous system B cells have several potential roles in multiple sclerosis (MS): secretors of proinflammatory cytokines and chemokines, presenters of autoantigens to T cells, producers of pathogenic antibodies, and reservoirs for viruses that trigger demyelination. To interrogate these roles, single-cell RNA sequencing (scRNA-Seq) was performed on paired cerebrospinal fluid (CSF) and blood from subjects with relapsing-remitting MS (RRMS; n = 12), other neurologic diseases (ONDs; n = 1), and healthy controls (HCs; n = 3). Single-cell immunoglobulin sequencing (scIg-Seq) was performed on a subset of these subjects and additional RRMS (n = 4), clinically isolated syndrome (n = 2), and OND (n = 2) subjects. Further, paired CSF and blood B cell subsets (RRMS; n = 7) were isolated using fluorescence activated cell sorting for bulk RNA sequencing (RNA-Seq). Independent analyses across technologies demonstrated that nuclear factor kappa B (NF-κB) and cholesterol biosynthesis pathways were activated, and specific cytokine and chemokine receptors were up-regulated in CSF memory B cells. Further, SMAD/TGF-β1 signaling was down-regulated in CSF plasmablasts/plasma cells. Clonally expanded, somatically hypermutated IgM+ and IgG1+ CSF B cells were associated with inflammation, blood-brain barrier breakdown, and intrathecal Ig synthesis. While we identified memory B cells and plasmablast/plasma cells with highly similar Ig heavy-chain sequences across MS subjects, similarities were also identified with ONDs and HCs. No viral transcripts, including from Epstein-Barr virus, were detected. Our findings support the hypothesis that in MS, CSF B cells are driven to an inflammatory and clonally expanded memory and plasmablast/plasma cell phenotype.', 'inclusion_exclusion_criteria': 'All RRMS and clinically isolated syndrome (CIS) subjects were participants in either the University of California, San Francisco (UCSF) Origins or Expression, Proteomics, Imaging, Clinical (EPIC) studies and were diagnosed according to the 2017 McDonald criteria. Subjects were not on immunomodulatory or immunosuppressive disease-modifying therapy at the time of sample collection. OND and HC participants were enrolled in a biobanking study “Immunological Studies of Neurologic Subjects\".', 'lab_name': 'Michael R. Wilson', 'lab_address': 'Department of Neurology, University of California, San Francisco, CA 94158', 'submitted_by': 'Scott Christley, scott.christley@utsouthwestern.edu, UT Southwestern Medical Center', 'collected_by': '', 'grants': 'The Origins and EPIC cohorts are supported by the Valhalla Foundation. S.L.H., A.R., S.S.Z., and M.R.W. received support from NIH/National Institute of Neurological Disorders and Stroke (NINDS) Grant R01NS092835. S.L.H., A.R., and M.R.W. received support from NIH/NINDS Grant R35NS111644. R.D.S. received research support from the National Multiple Sclerosis Society and American Brain Foundation Clinician-Scientist Development Award FAN-1608-25607. A.L.G. was supported by National Multiple Sclerosis Society Clinician-Scientist Development Award Kathleen C. Moore Postdoctoral Fellowship FAN-1507-05479. S.S.Z., R.D., J.J.S., and M.R.W. received support from NIH/National Institute of Allergy and Infectious Diseases Grant R21AI142186. J.J.S. is supported by NIH/NINDS Grant K08NS107619, National Multiple Sclerosis Society Grant TA-1903-33713, and a Race to Erase MS Young Investigator Award. A.-K.P. is supported by Swiss National Science Foundation Fellowships P2SKP3_164938/1 and P300PB_177927/1 and National Multiple Sclerosis Society Kathleen C. Moore Postdoctoral Fellowship FG-1708-28871. M.R.W. received support from the Debbie and Andy Rachleff Foundation.', 'pub_ids': 'PMID: 32859762', 'keywords_study': ['contains_ig', 'contains_paired_chain'], 'showArchivedJobs': False, 'vdjserver_keywords': ['is_10x_genomics', 'contains_single_cell'], 'owner': 'scott_public', 'adc_publish_date': '2021-10-06T18:45:37.655Z', 'adc_update_date': '2023-01-20T00:29:08.093Z'}, 'created': '2021-08-15T21:51:47.497-05:00', 'owner': 'vdj', 'tenantId': 'vdjserver.org'}\n"
+      "{'_id': {'$oid': '6119d12ad6018000016d697a'}, 'uuid': '1002552565004824085-242ac117-0001-012', 'schemaId': None, 'internalUsername': None, 'associationIds': [], 'lastUpdated': '2022-12-18T01:14:49.952-06:00', 'name': 'public_project', 'value': {'study_id': 'PRJNA624801', 'study_title': 'A Potently Neutralizing Antibody Protects Mice against SARS-CoV-2 Infection', 'study_type': {'id': 'NCIT:C93130', 'label': 'Animal Study'}, 'study_description': 'Severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2) is responsible for millions of infections and hundreds of thousands of deaths globally. There are no widely available licensed therapeutics against SARS-CoV-2, highlighting an urgent need for effective interventions. The virus enters host cells through binding of a receptor-binding domain within its trimeric spike glycoprotein to human angiotensin-converting enzyme 2. In this article, we describe the generation and characterization of a panel of murine mAbs directed against the receptor-binding domain. One mAb, 2B04, neutralized wild-type SARS-CoV-2 in vitro with remarkable potency (half-maximal inhibitory concentration of <2 ng/ml). In a murine model of SARS-CoV-2 infection, 2B04 protected challenged animals from weight loss, reduced lung viral load, and blocked systemic dissemination. Thus, 2B04 is a promising candidate for an effective antiviral that can be used to prevent SARS-CoV-2 infection.', 'inclusion_exclusion_criteria': ' ', 'lab_name': 'Ali H. Ellebedy', 'lab_address': 'Department of Pathology and Immunology, St. Louis, MO, 63110; USA', 'submitted_by': 'Scott Christley, scott.christley@utsouthwestern.edu, UT Southwestern Medical Center', 'collected_by': 'Wafaa B. Alsoussi, Department of Pathology and Immunology, St. Louis, MO, 63110; USA', 'grants': 'Work in Ellebedy laboratory was supported by NIAID R21 AI139813, U01 AI141990, and NIAID Centers of Excellence for Influenza Research and Surveillance (CEIRS) contract HHSN272201400008C. Work in the Diamond laboratory was partially supported by was supported by NIH contracts and grants 75N93019C00062 and R01 AI127828 and the Defense Advanced Research Project Agency HR001117S0019. Work in the Fremont laboratory was partially supported by NIAID contracts HHSN272201700060C and 75N93019C00062. Work in the Kleinstein laboratory was partially supported by NIH R01AI104739. Work in the Krammer laboratory was partially supported by the NIAID CEIRS contract HHSN272201400008C and Collaborative Influenza Vaccine Innovation Centers contract 75N93019C00051. The Genome Technology Access Center in the Department of Genetics at Washington University School of Medicine is partially supported by NCI Cancer Center Support Grant #P30 CA91842 to the Siteman Cancer Center and by ICTS/CTSA Grant# UL1 TR000448 from the NCRR. JST was supported by NIAID 5T32CA009547. JBC was supported by a Helen Hay Whitney postdoctoral fellowship.', 'pub_ids': 'PMID: 32591393', 'keywords_study': ['contains_ig', 'contains_paired_chain'], 'showArchivedJobs': False, 'vdjserver_keywords': ['is_10x_genomics', 'contains_single_cell'], 'owner': 'scott_public', 'adc_publish_date': '2021-08-26T22:48:15.506Z', 'adc_update_date': '2022-12-16T20:41:47.563Z'}, 'created': '2021-08-15T21:44:58.300-05:00', 'owner': 'vdj', 'tenantId': 'vdjserver.org'}\n"
      ]
     }
    ],
    "source": [
     "for item in jsonarray:\n",
     "    item_type = item['name']\n",
-    "    if '1874419312501190165-242ac117-0001-012' == item.get('uuid', None):\n",
+    "    if '1002552565004824085-242ac117-0001-012' == item.get('uuid', None):\n",
     "        print(item)"
    ]
   },
@@ -7118,9 +7114,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "general_env",
+   "display_name": "MSM_TensorFlow_2",
    "language": "python",
-   "name": "general_env"
+   "name": "msm_tensorflow_2"
   },
   "language_info": {
    "codemirror_mode": {
