--- a/conversion/tapis_v2_to_v3/data_migration.ipynb
+++ b/conversion/tapis_v2_to_v3/data_migration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "ffb06a6d-cd2e-4797-a0cf-7f2a80100868",
    "metadata": {},
    "outputs": [],
@@ -16,18 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "a9064573-e9d4-44ce-9bb7-2dda54e103d2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "job_events_df = pd.read_json('/mnt/data2/Projects/vdjserver/vdjserverJobEvents.json')\n",
-    "job_permissions_df = pd.read_json('/mnt/data2/Projects/vdjserver/vdjserverJobPermissions.json')\n",
-    "jobs_all_df = pd.read_json('/mnt/data2/Projects/vdjserver/vdjserverJobs_all.json')\n",
+    "job_events_df = pd.read_json('/mnt/md0/Projects/vdjserver/vdjserverJobEvents.json')\n",
+    "job_permissions_df = pd.read_json('/mnt/md0/Projects/vdjserver/vdjserverJobPermissions.json')\n",
+    "jobs_all_df = pd.read_json('/mnt/md0/Projects/vdjserver/vdjserverJobs_all.json')\n",
     "jobs_all_df['parameters.Creator'] = jobs_all_df['parameters'].apply(lambda x: json.loads(x).get('Creator', np.nan) if x else np.nan)\n",
-    "metadata_perms_df = pd.read_json('/mnt/data2/Projects/vdjserver/vdjserverMetadataPermissions.json')\n",
+    "metadata_perms_df = pd.read_json('/mnt/md0/Projects/vdjserver/vdjserverMetadataPermissions.json')\n",
     "\n",
-    "with open('/mnt/data2/Projects/vdjserver/vdjserverJsonArrayFeb042025.json', 'r') as f:\n",
+    "with open('/mnt/md0/Projects/vdjserver/vdjserverJsonArrayFeb042025.json', 'r') as f:\n",
     "    jsonarray = json.load(f)"
    ]
   },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "142acf77-a163-4f86-9e3e-bf162614537c",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
        "4  2022-12-18T01:14:48.453-06:00  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,31 +183,62 @@
    "id": "b42cc7fb-4a3b-4826-b5bc-54d1607fbc17",
    "metadata": {},
    "source": [
-    "## Write All public_project data into Json file"
+    "## Convert public_project data and output into JSONL files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "56a4a181-72fe-4a46-86fc-a6ef2ae8a275",
    "metadata": {},
    "outputs": [],
    "source": [
+    "exclusion_names = [ 'projectLoad', 'rearrangementLoad' ]\n",
+    "name_map = { \"projectFile\": \"project_file\" }\n",
+    "permission = [ { \"username\": \"vdjserver.curation@gmail.com\", \"permission\": { \"read\":True, \"write\":True } } ]\n",
+    "\n",
     "col_list = ['uuid', 'owner', 'associationIds', 'created', 'lastUpdated', 'name', 'value']\n",
     "obj_list = {}\n",
-    "project_uuid = '2034535426280329706-242ac113-0001-012'\n",
     "data_dir = 'Metadata_public_project/'  \n",
     "for project_uuid in df_public_project.uuid:\n",
     "    # Open a file in write mode\n",
-    "    with open(f'{data_dir}{project_uuid}_metadata.json', 'w') as file:\n",
+    "    with open(f'{data_dir}{project_uuid}_metadata.jsonl', 'w') as file:\n",
     "        for item in jsonarray:\n",
     "            item_type = item['name']\n",
-    "            # json_print(item)     \n",
+    "            if item_type in exclusion_names:\n",
+    "                continue\n",
     "            if (project_uuid in item.get('uuid', None)) or (project_uuid in item.get('associationIds', None)):\n",
+    "                if name_map.get(item_type) is not None:\n",
+    "                    item['name'] = name_map.get(item_type)\n",
+    "                    item_type = item['name']\n",
+    "\n",
+    "                # migrate the object\n",
+    "                if item_type == 'public_project':\n",
+    "                    # move old keywords\n",
+    "                    if item['value'].get('vdjserver_keywords') is not None:\n",
+    "                        if item['value'].get('vdjserver') is None:\n",
+    "                            item['value']['vdjserver'] = {}\n",
+    "                        item['value']['vdjserver']['keywords'] = item['value']['vdjserver_keywords']\n",
+    "                        del item['value']['vdjserver_keywords']\n",
+    "                    # add permissions\n",
+    "                    item['permission'] = permission\n",
+    "                    # old fields\n",
+    "                    if item['value'].get('showArchivedJobs') is not None:\n",
+    "                        del item['value']['showArchivedJobs']\n",
+    "                    if item['value'].get('owner') is not None:\n",
+    "                        del item['value']['owner']\n",
+    "\n",
+    "                if item_type == 'project_file':\n",
+    "                    # eliminate old file UUID\n",
+    "                    item['associationIds'] = [ project_uuid ]\n",
+    "\n",
+    "            # json_print(item)     \n",
     "                # json_print(item)\n",
     "                obj = {}\n",
     "                for col_name in col_list:\n",
     "                    obj[col_name] = item.get(col_name, None)\n",
+    "                if item.get('permission') is not None:\n",
+    "                    obj['permission'] = item['permission']\n",
     "                # print(obj)\n",
     "                json.dump(obj, file)\n",
     "                file.write('\\n')  # Add a newline after each JSON object"
@@ -236,7 +267,7 @@
     "data_dir = 'Metadata_public_project/'  # Create/Change the directory\n",
     "\n",
     "# Open a file in write mode\n",
-    "with open(f'{data_dir}{project_uuid}_metadata.json', 'w') as file:\n",
+    "with open(f'{data_dir}{project_uuid}_metadata.jsonl', 'w') as file:\n",
     "    for item in jsonarray:\n",
     "        item_type = item['name']\n",
     "        if (project_uuid in item.get('uuid', None)) or (project_uuid in item.get('associationIds', None)):\n",
@@ -259,9 +290,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "general_env",
+   "display_name": "MSM_TensorFlow_2",
    "language": "python",
-   "name": "general_env"
+   "name": "msm_tensorflow_2"
   },
   "language_info": {
    "codemirror_mode": {
